# House-Price-Prediction-API

./: .gitignore  explore.py  main.py  pyproject.toml  test_houses.csv
app/: main.py
ml_pipeline/: train.py
