[project]
name = "house-price-prediction-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.2",
    "joblib>=1.5.3",
    "pandas>=3.0.3",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]
